Fix misaligned main add ticket button by following a different approach

--- a/tailwind.css
+++ b/tailwind.css
@@ -51,12 +51,24 @@
   margin-bottom: 2rem
 }
 
+.mt-3 {
+  margin-top: 0.75rem
+}
+
 .mr-4 {
   margin-right: 1rem
 }
 
-.mt-3 {
-  margin-top: 0.75rem
+.ml-auto {
+  margin-left: auto
+}
+
+.mr-2 {
+  margin-right: 0.5rem
+}
+
+.mr-3 {
+  margin-right: 0.75rem
 }
 
 .block {
@@ -184,6 +196,10 @@
 
 .text-center {
   text-align: center
+}
+
+.text-right {
+  text-align: right
 }
 
 .text-2xl {
